<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logox2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/nameText"
        android:layout_below="@+id/logo"
        android:inputType="textPersonName"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@+id/centerPoint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerPoint"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:id="@+id/lastnameText"
        android:layout_below="@id/logo"
        android:layout_toRightOf="@id/centerPoint"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/emailText"
        android:hint="Email(*)"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/nameText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneText"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/emailText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressText"
        android:inputType="textPostalAddress"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/address"
        android:layout_below="@+id/phoneText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityText"
        android:inputType="textPostalAddress"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/city"
        android:layout_below="@+id/addressText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/postalcodeText"
        android:inputType="textPostalAddress"
        android:hint="@string/postalCode"
        android:layout_below="@+id/cityText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:id="@+id/exit"
        android:onClick="exit"
        android:layout_toLeftOf="@id/centerPoint"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/postalcodeText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignBottom="@+id/exit"
        android:layout_toRightOf="@+id/centerPoint" />

</RelativeLayout>
