<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    android:fitsSystemWindows="true"
    android:padding="0dp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:padding="0dp">

        <!-- Esto es lo que se va a ocultar -->
        <LinearLayout
            android:id="@+id/shopping_top_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_scrollFlags="scroll|snap">

            <!-- Indicador de posición del slider -->
            <include layout="@layout/activity_shopping_top_bar" />

            <!-- Slider de productos -->
            <usm.cc.misc.RecyclerViewProductList
                android:id="@+id/product_slider"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginBottom="7dp"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <!--  Carro de compras -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Título del carro de compras -->
            <TextView
                android:id="@+id/shopping_cart_title"
                android:background="@drawable/border_bottom_gray_bg_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="20dp"
                android:text="@string/shopping_cart_title"
                android:textColor="@color/text_shopping_cart_title"
                android:textSize="20sp"/>

            <!-- Total a pagar -->
            <LinearLayout
                android:id="@+id/shopping_cart_total_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/border_top_gray_bg_gray"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_cart_total_label"
                        android:textColor="@color/text_shopping_cart_total_label"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/shopping_cart_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="0"
                        android:textColor="@color/text_shopping_cart_total"
                        android:textSize="20sp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/button_send_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/button_send_rounded_corners"
                    android:padding="15dp"
                    android:text="@string/shopping_cart_button_send"
                    android:textAllCaps="true"
                    android:textColor="@color/text_shopping_cart_button_send"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Listado de productos seleccionados -->
            <usm.cc.misc.RecyclerViewShopppingCart
                android:id="@+id/shopping_cart_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/shopping_cart_total_section"
                android:layout_below="@id/shopping_cart_title"
                android:paddingBottom="2dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <!-- Mostrar cuando el carro de compras está vacío -->
            <TextView
                android:id="@+id/shopping_cart_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopping_cart_title"
                android:padding="20dp"
                android:text="@string/shopping_cart_empty"
                android:textColor="@color/text_product_description"
                android:textSize="15sp"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>